--- a/src/componentes/ListaSuspensa/ListaSuspensa.css
+++ b/src/componentes/ListaSuspensa/ListaSuspensa.css
@@ -2,21 +2,18 @@
     margin: 24px 0;
 }
 
-
 .lista-suspensa label {
     display: block;
     margin-bottom: 8px;
-    font-size: 18px;
-    font-weight: 600;
+    font-size: 24px;
 }
-
 .lista-suspensa select {
-    background-color: #ffffff;
+    background: #FFFFFF;
     box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
+    border-radius: 0px;
     width: 100%;
     border: none;
-    font-size: 16px;
-    font-weight: 400;
+    font-size: 24px;
     padding: 24px;
     box-sizing: border-box;
 }
