--- a/src/componentes/Formulario/Formulario.css
+++ b/src/componentes/Formulario/Formulario.css
@@ -6,7 +6,7 @@
 }
 .formulario-container .formulario {
     max-width: 80%;
-    background: #F7F7F7;
+    background: #e0e0e0;
     box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.08);
     border-radius: 20px;
     padding: 36px 64px;
