--- a/src/componentes/Formulario/Formulario.css
+++ b/src/componentes/Formulario/Formulario.css
@@ -1,17 +1,19 @@
 .formulario-container {
     display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
     justify-content: center;
-    margin: 80px 0;
-
+    margin: 80px 50px;
 }
+
 .formulario-container .formulario {
-    max-width: 80%;
     background: #e0e0e0;
     box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.08);
     border-radius: 20px;
+    flex: 1;
     padding: 36px 64px;
-    margin: 0 8px;
 }
+
 .formulario-container .formulario h2 {
     font-weight: 400;
     font-size: 32px;
